@@ -4,6 +4,11 @@ SimGrid (3.7) NOT RELEASED; urgency=low
   * Use the partial invalidation optimization by default for the
     network too. Should produce the exact same results, only faster.
 
+  SimDag:
+  * Performance boost by using a swag internally to compute the set of
+    tasks that are finished and should constitute the return value of
+    SD_simulate.
+
   -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
 SimGrid (3.6.2) stable; urgency=low 
